edit #body style.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
 
     /* ボディの定義 */
     div#body{
-      padding: 135px 0 135px 0;
+      overflow-y: auto;
+      background-color: white;
+      position: fixed;
+      top: 80px;
+      bottom: 55px;
+      width: 100%;
+
     }
 
     div#chat-body{
